Update the solution with the new defined architecture

--- a/src/API/OI.Template.API.csproj
+++ b/src/API/OI.Template.API.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Application\OI.Template.Application.csproj" />
+      <ProjectReference Include="..\Contract\OI.Template.Contract.csproj" />
     </ItemGroup>
 
     <ItemGroup>
