--- a/src/Infrastructure/OI.Template.Infrastructure.csproj
+++ b/src/Infrastructure/OI.Template.Infrastructure.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Exceptions\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\OI.Template.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
