--- a/src/API/OI.Template.API.csproj
+++ b/src/API/OI.Template.API.csproj
@@ -11,6 +11,14 @@
         <PackageReference Include="AutoMapper" Version="12.0.1" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
@@ -23,6 +31,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Application\OI.Template.Application.csproj" />
       <ProjectReference Include="..\Contract\OI.Template.Contract.csproj" />
+      <ProjectReference Include="..\Infrastructure\OI.Template.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
