--- a/src/Infrastructure/OI.Template.Infrastructure.csproj
+++ b/src/Infrastructure/OI.Template.Infrastructure.csproj
@@ -8,10 +8,21 @@
 
     <ItemGroup>
       <Folder Include="Exceptions\" />
+      <Folder Include="Persistence\Interceptors\" />
+      <Folder Include="Persistence\Migrations\" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Domain\OI.Template.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
