add a  lot of stuff I had on other remote

--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -6,8 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AzureConfiguration": {
+    "ConnectionString": "UseDevelopmentStorage=true;DevelopmentStorageProxyUri=http://127.0.0.1:10000/devstoreaccount1",
+    "ContainerName": "archive-api"
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=dbname;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost,1433;Database=APITemplate;User=sa;Password=p@ssword;encrypt=true;trustServerCertificate=true;"
   },
   "AllowedHosts": "*"
 }
