--- a/src/Application/OI.Template.Application.csproj
+++ b/src/Application/OI.Template.Application.csproj
@@ -22,4 +22,10 @@
       <ProjectReference Include="..\Domain\OI.Template.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Http.Features">
+        <HintPath>..\..\..\..\..\.nuget\packages\microsoft.aspnetcore.http.features\5.0.17\lib\net5.0\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
